--- a/package.json
+++ b/package.json
@@ -12,13 +12,21 @@
     "@react-three/cannon": "^6.5.0",
     "@react-three/drei": "^9.40.0",
     "@react-three/fiber": "^8.9.1",
+    "alea": "^1.0.1",
+    "fast-simplex-noise": "^4.0.0",
+    "fastnoisejs": "^1.0.1",
     "nanoid": "^3.3.4",
+    "noisejs": "^2.1.0",
+    "perlin-noise-3d": "^0.5.4",
+    "perlin-simplex": "^0.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "simplex-noise": "^4.0.1",
     "three": "^0.146.0",
     "zustand": "^3.7.2"
   },
   "devDependencies": {
+    "@types/noisejs": "^0.0.28",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@types/three": "^0.146.0",
